[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
ash = "0.38.0"
ash-window = "0.13.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
car = "0.1.1"
colorize = "0.1.0"
inline-spirv = { version = "0.2.1", default-features = false, features = [
  "glsl",
] }
phf = { version = "0.11.3", features = ["macros"] }
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
winit = "0.30.5"
